--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,6 @@
 	<display-name>${projectName}</display-name>
 	<description>spring demo project</description>
 
-
 	<context-param>
 		<param-name>projectName</param-name>
 		<param-value>${projectName}</param-value>
@@ -16,15 +15,23 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
+	<!--<context-param>-->
+		<!--<param-name>log4jConfiguration</param-name>-->
+		<!--<param-value>classpath:log4j2.xml</param-value>-->
+	<!--</context-param>-->
+
 
 	<listener>
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-	<listener>
 		<listener-class>com.glitter.demo.listener.DemoListener</listener-class>
+	</listener>
+	<!--<listener>-->
+		<!--<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>-->
+	<!--</listener>-->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 	<session-config>
