--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
             <version>4.3.16.RELEASE</version>
         </dependency>
 
-        <!-- 配置日志相关jar包 -->
+        <!-- 配置日志相关jar包开始 -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -85,6 +85,12 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.10.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.11</version>
+        </dependency>
+        <!-- 配置日志相关jar包结束 -->
 
         <!-- 其他jar包-->
         <dependency>
