--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>file/**</exclude>
+                    <exclude>generatorConfig.xml</exclude>
+                    <exclude>jdbc.properties</exclude>
+                </excludes>
             </resource>
         </resources>
         <testResources>
