--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,3 @@
-jdbc.mysql.url=jdbc:mysql://127.0.0.1:3306/glitter_demo?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
-jdbc.mysql.username=root
-jdbc.mysql.password=root
+jdbc.mysql.url=jdbc:mysql://172.28.5.92:3306/org_taip_proxy?useUnicode=true&amp;characterEncoding=UTF-8&amp;allowMultiQueries=true&amp;rewriteBatchedStatements=true
+jdbc.mysql.username=syswin
+jdbc.mysql.password=syswin
